fixing spacing

--- a/static/css/prettyMain.css
+++ b/static/css/prettyMain.css
@@ -117,7 +117,7 @@ section.aboutSection{
 	display: inline-block;
 	float: right;
 	line-height: 1.75rem;
-	margin: 5% 7% 0 0;
+	margin: 7% 8% 0 0;
 	width: 45%;
 }
 
@@ -126,9 +126,10 @@ img.roundedPic{
 }
 
 img#sanFran{
+	margin-left: 7%;
 	max-height: 300px;
 	max-width: 300px;
-	padding: 4% 4% 4% 5%;
+	padding: 3%;
 	width: 40%;
 }
 
